--- a/convert_log.ipynb
+++ b/convert_log.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "1269d051",
    "metadata": {},
    "outputs": [
@@ -17,7 +17,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "FILE_NAME = 'rc_5.log'\n",
+    "FILE_NAME = 'setting_2_actual/rc_4.log'\n",
     "\n",
     "# Step 1: Read the .log file\n",
     "with open(FILE_NAME, 'r') as file:\n",
