--- a/cool.ipynb
+++ b/cool.ipynb
@@ -283,11 +283,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": null,
    "id": "081ccd96",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#May ve improved by using the average of the rpm values over the interval and decreasing the size of the interval to cut out the part where we are entering and exiting the turn\n",
     "def check_turning_radius(turning_interval, rear_axle, steering_angle, yaw, wheel_circumference):\n",
     "    start, end = turning_interval\n",
     "    radii = []\n",
@@ -306,16 +307,13 @@
     "        velocity = wheel_circumference * rpm * np.sin(np.radians(steer)) / 60.0\n",
     "        \n",
     "        #print(f\"Wheel Circumference: {wheel_circumference} m, RPM: {rpm}, Steering Angle: {steer} degrees\")\n",
-    "        \n",
     "        #print(f\"Velocity: {velocity} m/s, Yaw Rate: {yaw_rate} rad/s\")\n",
     "        \n",
     "        # Avoid division by zero if yaw rate is 0\n",
     "        if yaw_rate == 0:\n",
     "            continue\n",
     "        \n",
-    "        \n",
-    "        ################### UP TO HERE SEEMS TO BE CORRECT ###################\n",
-    "        #### DOWN HERE SEEMS TO BE INCORRECT #### \n",
+    "    \n",
     "\n",
     "        # Compute turning radius (in meters)\n",
     "        radius = velocity / yaw_rate \n",
